// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GridGenerator ACT theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-4 css-mch933-MuiGrid2-root"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-lcz5p-MuiGrid2-root"
    >
      <div
        class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-15vus0t-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="true"
        >
          <div
            class="label-split"
          >
            <span
              class="label-help"
            />
            <span
              class="required"
            >
              Required
            </span>
          </div>
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-elutjh-MuiInputBase-root-MuiInput-root"
          required=""
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input css-19hrhww-MuiInputBase-input-MuiInput-input"
            placeholder="Input 1"
            required=""
            type="text"
            value="value1"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-lcz5p-MuiGrid2-root"
    >
      <div
        class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-15vus0t-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="true"
        >
          <div
            class="label-split"
          >
            <span
              class="label-help"
            />
            <span
              class="required"
            >
              Required
            </span>
          </div>
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-elutjh-MuiInputBase-root-MuiInput-root"
          required=""
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input css-19hrhww-MuiInputBase-input-MuiInput-input"
            placeholder="Input 2"
            required=""
            type="password"
            value="value2"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-4 css-mch933-MuiGrid2-root"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-lcz5p-MuiGrid2-root"
    >
      <div
        class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-15vus0t-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="true"
        >
          <div
            class="label-split"
          >
            <span
              class="label-help"
            />
          </div>
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-elutjh-MuiInputBase-root-MuiInput-root"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input css-19hrhww-MuiInputBase-input-MuiInput-input"
            placeholder="Input 3"
            type="text"
            value="value3"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`GridGenerator ACT_ET theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-4 css-mch933-MuiGrid2-root"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-lcz5p-MuiGrid2-root"
    >
      <div
        class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-ut57vy-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="true"
        >
          <div
            class="label-split"
          >
            <span
              class="label-help"
            />
            <span
              class="required"
            >
              Required
            </span>
          </div>
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-100pbi-MuiInputBase-root-MuiInput-root"
          required=""
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input css-1lxbyjs-MuiInputBase-input-MuiInput-input"
            placeholder="Input 1"
            required=""
            type="text"
            value="value1"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-lcz5p-MuiGrid2-root"
    >
      <div
        class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-ut57vy-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="true"
        >
          <div
            class="label-split"
          >
            <span
              class="label-help"
            />
            <span
              class="required"
            >
              Required
            </span>
          </div>
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-100pbi-MuiInputBase-root-MuiInput-root"
          required=""
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input css-1lxbyjs-MuiInputBase-input-MuiInput-input"
            placeholder="Input 2"
            required=""
            type="password"
            value="value2"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-4 css-mch933-MuiGrid2-root"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-lcz5p-MuiGrid2-root"
    >
      <div
        class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-ut57vy-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="true"
        >
          <div
            class="label-split"
          >
            <span
              class="label-help"
            />
          </div>
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-100pbi-MuiInputBase-root-MuiInput-root"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input css-1lxbyjs-MuiInputBase-input-MuiInput-input"
            placeholder="Input 3"
            type="text"
            value="value3"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`GridGenerator ENCOURA theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-4 css-mch933-MuiGrid2-root"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-lcz5p-MuiGrid2-root"
    >
      <div
        class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-1g08qfu-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="true"
        >
          <div
            class="label-split"
          >
            <span
              class="label-help"
            />
            <span
              class="required"
            >
              Required
            </span>
          </div>
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-1oznz18-MuiInputBase-root-MuiInput-root"
          required=""
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input css-19hrhww-MuiInputBase-input-MuiInput-input"
            placeholder="Input 1"
            required=""
            type="text"
            value="value1"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-lcz5p-MuiGrid2-root"
    >
      <div
        class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-1g08qfu-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="true"
        >
          <div
            class="label-split"
          >
            <span
              class="label-help"
            />
            <span
              class="required"
            >
              Required
            </span>
          </div>
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-1oznz18-MuiInputBase-root-MuiInput-root"
          required=""
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input css-19hrhww-MuiInputBase-input-MuiInput-input"
            placeholder="Input 2"
            required=""
            type="password"
            value="value2"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-4 css-mch933-MuiGrid2-root"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-lcz5p-MuiGrid2-root"
    >
      <div
        class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-1g08qfu-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="true"
        >
          <div
            class="label-split"
          >
            <span
              class="label-help"
            />
          </div>
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-1oznz18-MuiInputBase-root-MuiInput-root"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input css-19hrhww-MuiInputBase-input-MuiInput-input"
            placeholder="Input 3"
            type="text"
            value="value3"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`GridGenerator ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-4 css-mch933-MuiGrid2-root"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-lcz5p-MuiGrid2-root"
    >
      <div
        class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-44qkb0-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="true"
        >
          <div
            class="label-split"
          >
            <span
              class="label-help"
            />
            <span
              class="required"
            >
              Required
            </span>
          </div>
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-h1rt4q-MuiInputBase-root-MuiInput-root"
          required=""
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input css-1lxbyjs-MuiInputBase-input-MuiInput-input"
            placeholder="Input 1"
            required=""
            type="text"
            value="value1"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-lcz5p-MuiGrid2-root"
    >
      <div
        class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-44qkb0-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="true"
        >
          <div
            class="label-split"
          >
            <span
              class="label-help"
            />
            <span
              class="required"
            >
              Required
            </span>
          </div>
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-h1rt4q-MuiInputBase-root-MuiInput-root"
          required=""
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input css-1lxbyjs-MuiInputBase-input-MuiInput-input"
            placeholder="Input 2"
            required=""
            type="password"
            value="value2"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-4 css-mch933-MuiGrid2-root"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-lcz5p-MuiGrid2-root"
    >
      <div
        class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-44qkb0-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="true"
        >
          <div
            class="label-split"
          >
            <span
              class="label-help"
            />
          </div>
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-h1rt4q-MuiInputBase-root-MuiInput-root"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input css-1lxbyjs-MuiInputBase-input-MuiInput-input"
            placeholder="Input 3"
            type="text"
            value="value3"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`GridGenerator ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-4 css-mch933-MuiGrid2-root"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-lcz5p-MuiGrid2-root"
    >
      <div
        class="MuiFormControl-root css-jayakb-MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-13dhu7k-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="true"
        >
          <div
            class="label-split"
          >
            <span
              class="label-help"
            />
            <span
              class="required"
            >
              Required
            </span>
          </div>
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-kfqneu-MuiInputBase-root-MuiInput-root"
          required=""
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input css-txxbv2-MuiInputBase-input-MuiInput-input"
            placeholder="Input 1"
            required=""
            type="text"
            value="value1"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-lcz5p-MuiGrid2-root"
    >
      <div
        class="MuiFormControl-root css-jayakb-MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-13dhu7k-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="true"
        >
          <div
            class="label-split"
          >
            <span
              class="label-help"
            />
            <span
              class="required"
            >
              Required
            </span>
          </div>
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-kfqneu-MuiInputBase-root-MuiInput-root"
          required=""
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input css-txxbv2-MuiInputBase-input-MuiInput-input"
            placeholder="Input 2"
            required=""
            type="password"
            value="value2"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-4 css-mch933-MuiGrid2-root"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-lcz5p-MuiGrid2-root"
    >
      <div
        class="MuiFormControl-root css-jayakb-MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-13dhu7k-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="true"
        >
          <div
            class="label-split"
          >
            <span
              class="label-help"
            />
          </div>
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-kfqneu-MuiInputBase-root-MuiInput-root"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input css-txxbv2-MuiInputBase-input-MuiInput-input"
            placeholder="Input 3"
            type="text"
            value="value3"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
